--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remolque Almería</title>
   <link rel="stylesheet" href="estilos.css">
+  <script src="script.js"></script>
 </head>
 <body>
   <header>
